--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.al36.favorite</groupId>
-    <artifactId>orderWS</artifactId>
+    <artifactId>productWS</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>orderWS</name>
-    <description>orderWS</description>
+    <name>productWS</name>
+    <description>productWS</description>
     <properties>
         <java.version>11</java.version>
     </properties>
