--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/productws?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+logging.level.org.hibernate=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.cache=DEBUG
+logging.level.org.hibernate.stats=DEBUG
