Added server.port to application.properties Refactored db name to productws_db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/productws?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/productws_db?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create
@@ -8,3 +8,4 @@ logging.level.org.hibernate=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.cache=DEBUG
 logging.level.org.hibernate.stats=DEBUG
+server.port=9092
