--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.hbm2ddl.import_files=data.sql
 logging.level.org.hibernate=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.cache=DEBUG
