--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/productWS_db?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://192.168.33.20:9095/productWS_db?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:productWS_db}?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=${RDS_USERNAME:root}
+spring.datasource.password=${RDS_PASSWORD:root}
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
@@ -10,4 +10,4 @@ logging.level.org.hibernate=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.cache=DEBUG
 logging.level.org.hibernate.stats=DEBUG
-server.port=9092
+server.port=5000
